<resources>
    <string name="app_name">Listes de membres</string>
    <string name="ajouter_membres">Ajouter membres</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="lister">Lister</string>
    <string name="rechercher">Rechercher</string>
    <string name="liste_par_sexe">Liste par sexe</string>
    <string name="liste_par_sexe_f_minin_et_leur_fonction">Liste par sexe féminin et leur fonction</string>
    <string name="liste_par_sexe_f_minin_et">Liste par sexe féminin et...</string>

    <string name="ouvertureNav">Ouverture du menu</string>
    <string name="fermetureNav">Fermeture du menu</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="fonction">Fonction</string>
    <string name="commentaires">Commentaires</string>
    <string name="envoyer">Envoyer</string>
    <string name="enregistrer_en_txt">Enregistrer txt</string>
    <string name="vider_la_liste_sans_enregistrer">Vider</string>
    <string name="liste_des_membres">Liste des membres</string>
    <string name="erreur_txt">Impossible d\'extraire des données du fichier .txt</string>
    <string name="rechercher_membre">Rechercher un membre</string>
    <string name="recherche_sexe">Rechercher par sexe</string>
    <string name="liste_femmes_fonction">Liste par sexe féminin et leur fonction</string>
    <string name="choix_sexe_afficher">Sélectionnez le sexe des membres\n que vous souhaitez afficher à partir du fichier .txt</string>
    <string name="entrez_nom_cherche">Entrez le nom et le prénom\n de la personne que vous recherchez</string>
    <string name="membre_inexistant">Membre inexistant</string>
    <string name="aucun_sexe">Aucun membre du sexe sélectionné</string>
    <string name="liste_videe">Liste temporaire vidée</string>
    <string name="titre_ajouter">Liste des membres à ajouter</string>
    <string name="titre_rien_a_ajouter">Aucun membre à ajouter  pour le moment.</string>
    <string name="membre_ajoute_temp">Membre ajouté à la liste temporaire</string>
    <string name="txt_enregistre">Fichier .txt enregistré</string>

</resources>
