<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Menu">
        <menu>
            <item
                android:id="@+id/menu_ajouter_membres"
                android:title="@string/ajouter_membres"
                android:icon="@drawable/ic_group_add_24px" />
            <item
                android:id="@+id/menu_enregistrer"
                android:title="@string/enregistrer"
                android:icon="@drawable/ic_save_24px" />
            <item
                android:id="@+id/menu_lister"
                android:title="@string/lister"
                android:icon="@drawable/ic_format_list_numbered_24px" />
            <item
                android:id="@+id/menu_rechercher"
                android:title="@string/rechercher"
                android:icon="@drawable/ic_search_24px" />
            <item
                android:id="@+id/menu_liste_sexe"
                android:title="@string/liste_par_sexe"
                android:icon="@drawable/ic_wc_24px" />
            <item
                android:id="@+id/menu_liste_fem"
                android:title="@string/liste_par_sexe_f_minin_et"
                android:icon="@drawable/ic_business_center_24px" />
        </menu>
    </item>
</menu>